# FluctlightDB

./: .dockerignore  .gitignore  .mailmap  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  fluctlight-serve.service
.githooks/: prepare-commit-msg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  paper-pages.yml  publish-pypi.yml  release.yml
benchmarks/: README.md
benchmarks/results/: 2025-06-22.json
crates/fluctlight-cli/: Cargo.toml
crates/fluctlight-cli/src/: display.rs  main.rs  shell.rs  worker.rs
crates/fluctlight-py/: Cargo.toml  README.md  pyproject.toml
crates/fluctlight-py/src/: lib.rs
crates/fluctlightdb/: Cargo.toml
crates/fluctlightdb/src/: activation.rs  amygdala.rs  api_slim.rs  auth.rs  auth_store.rs  autonomic.rs  brain.rs  budget.rs  cache.rs  checkpoint_policy.rs  compact.rs  cortex.rs  dentate.rs  development.rs  engram.rs  error.rs  fovea.rs  graph.rs  graph_export.rs  hippocampus.rs  id.rs  legacy_hippocampus.rs  lib.rs  life.rs  manifest.rs  metrics.rs  neurogenesis.rs  neuromodulator.rs  partial.rs  plasticity.rs  prefrontal.rs  preplay.rs  query.rs  rate_limit.rs  raw_export.rs  reality.rs  replicate.rs  segment.rs  semantic.rs  separation_gate.rs  (+13 more)
crates/fluctlightdb/src/index/: lexical.rs  mod.rs  semantic.rs  sidecar.rs
crates/fluctlightdb/tests/: cert_extra.rs  generated_matrix.rs  integration.rs  load_smoke.rs  longmemeval_bench.rs  manifesto_audit.rs  prod_bench.rs  roadmap.rs  scale_bench.rs  serve_integration.rs
docker/: entrypoint.sh
docs/: BENCHMARKS.md  CLI.md  DEPLOYMENT.md  DOCKER.md  DevStages.md  GETTING_STARTED.md  MULTI_AGENT.md  Manifesto.md  ONBOARDING.md  PAPER_DRAFT.md  PLATFORMS.md  PLATFORM_COMPAT.md  PUBLISHING.md  PUBLISH_PAPER.md  RESEARCH_VENUES.md  VPS_DESKTOP.md  WORLD_LAUNCH.md  openapi.yaml  visual.html
docs/runbooks/: backup-restore.md  migration-v3-v4.md  serve-crash-recovery.md  synapse-pressure-high.md  tenant-provisioning.md
embed-server/: main.py  requirements.txt
examples/multi-agent-monorepo/: README.md
examples/multi-agent-monorepo/.fluctlight/: config.yaml
hub/: README.md
hub/dataset/: README.md
hub/paper/: README.md
papers/: README.md
papers/arxiv-v1/: build.sh  main.tex  references.bib
papers/outreach/: awesome-list-pr.md  devto.md  hn.md  linkedin.md
papers/public/: index.html
papers/public/assets/: app.js  style.css
papers/public/files/: draft.md  guide.md  main.tex
papers/site/: index.html  install-search-site.sh  paper-server.py
papers/site/data/: results.json
papers/site/files/: guide.md
papers/submit/: release-notes.md
papers/submit/ieee-access/: checklist.md  cover-letter.md  highlights.txt
private.example/: README.md
scripts/: fluctlight-backup.sh  fluctlight-bin.sh  fluctlight-drill.sh  fluctlight-failover.sh  fluctlight-prod-bench.py  fluctlight-restore.sh  ground-wallet-truth.py  install-native.sh  install-python-client.sh  launch-paper.sh  longmemeval-scale-bench.py  manifesto-audit.sh  prod-bench-latest.json  publish-paper-huggingface.sh  publish-paper-platforms.sh  reingest-feed.py  replicate.sh  setup-git-hooks.sh  setup-git-identity.sh  sync-paper-public.sh  update-github-about.sh
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/fluctlightdb/: __init__.py  brain.py  cli.py  doctor.py  handoff.py  handoff_capture.py  handoff_index.py  inbox_ui.py  lock.py  mcp_server.py  onboard.py  platform.py  project.py  remote_hub.py  sync.py  validation.py  worker.py
sdks/python/fluctlightdb/templates/: TEAM_SYNC.md
sdks/python/fluctlightdb/templates/claude/: CLAUDE.snippet.md  settings.json
sdks/python/fluctlightdb/templates/claude/skills/fluctlight-memory/: SKILL.md
sdks/python/fluctlightdb/templates/codex/: fluctlight.env.example  mcp.json
sdks/python/fluctlightdb/templates/cursor/: hooks.json  mcp.json
sdks/python/fluctlightdb/templates/cursor/hooks/: before_submit.cmd  before_submit.py  session_end.cmd  session_end.py  session_start.cmd  session_start.py  stop_handoff.cmd  stop_handoff.py  track_files.cmd  track_files.py
sdks/python/fluctlightdb/templates/cursor/rules/: fluctlight.mdc
sdks/python/tests/: test_project.py
sdks/typescript/: fluctlightdb.ts
systemd/: README.md  auth.env.example  environment.example  fluctlight-backup.service  fluctlight-backup.timer  fluctlight-drill.service  fluctlight-drill.timer  fluctlight-embed.service  fluctlight-replica-serve.service  fluctlight-replicate.service
systemd/agent-bridge.service.d.example/: fluctlight.conf
systemd/fluctlight-serve.service.d/: production.conf
systemd/fluctlight-stream.service.d/: fluctlight.conf
systemd/serverbrain-bridge.service.d/: fluctlight.conf
