[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fluctlightdb-native"
version = "0.4.5"
description = "In-process FluctlightDB database engine for AI agents (like sqlite3 for agent memory)"
license = "MIT OR Apache-2.0"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fluctlightdb_native"
