[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluctlightdb"
version = "0.4.4"
description = "Embedded memory engine for AI agents — third data model (experience/activate), provenance, benchmarks. Goal: SQLite for agent memory."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ganesh S", email = "voxmastery@ambugo.tech" }]
keywords = [
  "ai-agents",
  "agent-memory",
  "database",
  "embedded-database",
  "llm",
  "memory",
  "rag",
  "recall",
  "rust",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/voxmastery/FluctlightDB"
Documentation = "https://github.com/voxmastery/FluctlightDB/blob/main/docs/GETTING_STARTED.md"
Repository = "https://github.com/voxmastery/FluctlightDB"
Issues = "https://github.com/voxmastery/FluctlightDB/issues"
Paper = "https://github.com/voxmastery/FluctlightDB/tree/main/papers/arxiv-v1"
Benchmarks = "https://github.com/voxmastery/FluctlightDB/blob/main/benchmarks/results/2025-06-22.json"

[project.optional-dependencies]
native = ["fluctlightdb-native>=0.4.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fluctlightdb*"]
